# openapi.yaml
@@ -6,7 +6,7 @@ info:
     title: Account API
     version: 0.0.1
 paths:
-    v1/create:
+    v1/account/create:
         post:
             tags:
                 - Account
@@ -30,17 +30,11 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    v1/delete/{accountNumber}:
+    v1/account/delete:
         delete:
             tags:
                 - Account
             operationId: Account_DeleteAccount
-            parameters:
-                - name: accountNumber
-                  in: path
-                  required: true
-                  schema:
-                    type: string
             requestBody:
                 content:
                     application/json:
@@ -60,7 +54,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    v1/find/{accountId}:
+    v1/account/find/{accountId}:
         get:
             tags:
                 - Account
@@ -116,7 +110,7 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    v1/update:
+    v1/account/update:
         put:
             tags:
                 - Account
@@ -134,6 +128,86 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/UpdateResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    v1/accountnumber/find/{accountNumber}:
+        get:
+            tags:
+                - Account
+            operationId: Account_FindAccountNumber
+            parameters:
+                - name: accountNumber
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+                - name: accountId
+                  in: query
+                  schema:
+                    type: string
+                - name: accountType
+                  in: query
+                  schema:
+                    type: string
+                - name: currency
+                  in: query
+                  schema:
+                    type: string
+                - name: status
+                  in: query
+                  schema:
+                    type: string
+                - name: availableBalance
+                  in: query
+                  schema:
+                    type: string
+                - name: pendingBalance
+                  in: query
+                  schema:
+                    type: string
+                - name: creditLimit
+                  in: query
+                  schema:
+                    type: string
+                - name: customerId
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/FindResponse'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    v1/customerId/find/{customerId}:
+        get:
+            tags:
+                - Account
+            operationId: Account_FindByCustomerId
+            parameters:
+                - name: customerId
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/FindResponse2'
                 default:
                     description: Default error response
                     content:
@@ -184,6 +258,8 @@ components:
                     type: string
                 customerId:
                     type: string
+                Message:
+                    type: string
         DeleteRequest:
             type: object
             properties:
@@ -198,23 +274,7 @@ components:
         DeleteResponse:
             type: object
             properties:
-                accountId:
-                    type: string
-                accountNumber:
-                    type: string
-                accountType:
-                    type: string
-                currency:
-                    type: string
-                status:
-                    type: string
-                availableBalance:
-                    type: string
-                pendingBalance:
-                    type: string
-                creditLimit:
-                    type: string
-                customerId:
+                Message:
                     type: string
         FindResponse:
             type: object
@@ -236,6 +296,31 @@ components:
                 creditLimit:
                     type: string
                 customerId:
+                    type: string
+                Message:
+                    type: string
+        FindResponse2:
+            type: object
+            properties:
+                accountId:
+                    type: string
+                accountNumber:
+                    type: string
+                accountType:
+                    type: string
+                currency:
+                    type: string
+                status:
+                    type: string
+                availableBalance:
+                    type: string
+                pendingBalance:
+                    type: string
+                creditLimit:
+                    type: string
+                customerId:
+                    type: string
+                Message:
                     type: string
         GoogleProtobufAny:
             type: object
@@ -302,6 +387,8 @@ components:
                 creditLimit:
                     type: string
                 customerId:
+                    type: string
+                Message:
                     type: string
 tags:
     - name: Account
